--- a/app/src/main/assets/public/index.html
+++ b/app/src/main/assets/public/index.html
@@ -14,11 +14,13 @@
     <script src="js/bundle.js"></script>
 
 <body>
-    <div id='alert-box'></div>
-    <div id="loadNavbar" class="container"></div>
-    <main>
-    </main>
-    <div class="footer-container text-center"><a href="https://github.com/leegggg/sissy-univ-android">Android Version by Louise LIN</a><div>
+<div id='alert-box'></div>
+<div id="loadNavbar" class="container"></div>
+<main>
+</main>
+<div class="footer-container text-center">
+    <a href="https://github.com/leegggg/sissy-univ-android">Android Version by Louise LIN</a>
+</div>
 </body>
 <footer></footer>
 
