replace link with release page

--- a/app/src/main/assets/public/index.html
+++ b/app/src/main/assets/public/index.html
@@ -22,6 +22,6 @@
 </body>
 <footer></footer>
 <div class="footer-container text-center">
-    <a href="https://github.com/leegggg/sissy-univ-android">Android Version by Louise LIN</a>
+    <a href="https://github.com/leegggg/sissy-univ-android/releases">Check new release by Louise LIN</a>
 </div>
 </html>
