--- a/app/src/main/assets/public/index.html
+++ b/app/src/main/assets/public/index.html
@@ -1,6 +1,6 @@
 <html lang="zh" xmlns="http://www.w3.org/1999/html">
 <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="doumiaojiang">
     <link rel="icon" href="img/logo.png">
@@ -21,7 +21,4 @@
 
 </body>
 <footer></footer>
-<div class="footer-container text-center">
-    <a href="https://github.com/leegggg/sissy-univ-android/releases">Check new release by Louise LIN</a>
-</div>
 </html>
